Show error if more words were entered

--- a/app/Presenters/templates/Home/default.latte
+++ b/app/Presenters/templates/Home/default.latte
@@ -5,5 +5,9 @@
         <p>Translated word: {$translatedWord}</p>
     {/if}
 
+    {if isset($errorMsg)}
+        <p>{$errorMsg}</p>
+    {/if}
+
     {control pigLatinForm}
 {/block}
